--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@ position: relative;
   background-color: rgba(0, 0, 0, 0.4);
   background-blend-mode: overlay;
 ">
-  <input id="chat-input" type="text" placeholder="🍜 Digite uma mensagem..." style="
+  <input id="chat-input" type="text" placeholder="🍜 Digite uma mensagem..." autocomplete="off" style="
     flex: 1;
     padding: 10px;
     border: none;
@@ -1044,6 +1044,7 @@ position: relative;
     outline: none;
     font-size: 1rem;
   border-radius: 15px;
+autocomplete="off"
   ">
 <button id="chat-enviar" style="
   background: transparent;
