--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 .responder-wrapper {
   display: none;
   position: absolute;
-  bottom: 44.5px; /* ou como preferir */
+ top: -16.5px;
   left: 10px;
 }
 
@@ -1072,7 +1072,7 @@ position: relative;
   <!-- Mensagens -->
   <div id="chat-messages" style="
   flex: 1;
-  padding: 10px
+  padding: 10px;
   overflow-y: auto;
   display: flex;
   flex-direction: column-reverse;
