--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ background-color: #cc0000 !important; /* vermelho mais escuro */
 }
 
 .botao-responder {
-  background: rgba(34, 34, 34, 0.5); /* preto/cinza com 50% de opacidade */
+  background: transparent;
   border: none;
   border-radius: 5px;
   color: #ccc;
@@ -80,11 +80,6 @@ background-color: #cc0000 !important; /* vermelho mais escuro */
   transition: background 0.2s;
   outline: none;
   box-shadow: none;
-}
-
-.botao-responder:hover {
-  background: #5555;
-  color: white;
 }
 
 #chat-input::placeholder {
