--- a/index.html
+++ b/index.html
@@ -1358,14 +1358,22 @@ chatButton.onclick = () => {
   const isOpen = chatBox.style.display === "flex";
   chatBox.style.display = isOpen ? "none" : "flex";
 
-  if (!isOpen) {
-    const nova = localStorage.getItem("ultima_msg_zeus");
-    if (nova) {
-      localStorage.setItem("ultima_msg_zeus_vista", nova);
+  const setas = document.querySelectorAll(".scroll-arrow");
+  setas.forEach(seta => {
+    if (isOpen) {
+      // Se o chat estava aberto e vamos fechar, volta o estilo original
+      seta.style.display = "";
+    } else {
+      // Se o chat estava fechado e vamos abrir, esconde as setas
+      seta.style.display = "none";
     }
-    document.getElementById("chat-alerta").style.display = "none";
-  }
+  });
+
+  document.getElementById("chat-alerta").style.display = "none";
 };
+
+
+
 
 let podeEnviar = true;
 let tempoRestante = 0;
@@ -1381,24 +1389,31 @@ chatInput.addEventListener("keydown", async (e) => {
 
   if (!podeEnviar) {
     avisoNome.style.display = "block";
-    avisoNome.textContent = `⏳ Espere ${tempoRestante}s...`;
+    avisoNome.textContent = `Aguarde para enviar a próxima mensagem! ⏳ ${tempoRestante}s...`;
     return;
   }
 
   // ⛔ BLOQUEIA envio imediatamente!
   podeEnviar = false;
   tempoRestante = 10;
-  avisoNome.style.display = "block";
-  avisoNome.textContent = `⏳ Espere ${tempoRestante}s...`;
+
+  // 🔒 Impede digitação e limpa o campo
+  chatInput.value = "";
+  chatInput.disabled = true;
+  chatInput.placeholder = `🍜 Espere ${tempoRestante}s...`;
+
 
   intervaloCooldown = setInterval(() => {
     tempoRestante--;
     if (tempoRestante > 0) {
-      avisoNome.textContent = `⏳ Espere ${tempoRestante}s...`;
+      chatInput.placeholder = `🍜 Espere ${tempoRestante}s...`;
     } else {
       clearInterval(intervaloCooldown);
       podeEnviar = true;
       avisoNome.style.display = "none";
+      chatInput.disabled = false;
+      chatInput.placeholder = "🍜 Digite uma mensagem...";
+      chatInput.focus();
     }
   }, 1000);
 
@@ -1428,24 +1443,17 @@ chatInput.addEventListener("keydown", async (e) => {
   }
 
   try {
-await addDoc(collection(db, "chat-global"), {
-  uid: user.uid,
-  email: user.email,
-  nome: nome,
-  text: text,
-  avatar: avatar,
-  timestamp: new Date(),
-  respostaDe: responderPara
-    ? {
-        id: responderPara.id // apenas o ID da mensagem sendo respondida
-      }
-    : null
-});
-
-
-
-    chatInput.value = "";
-
+    await addDoc(collection(db, "chat-global"), {
+      uid: user.uid,
+      email: user.email,
+      nome: nome,
+      text: text,
+      avatar: avatar,
+      timestamp: new Date(),
+      respostaDe: responderPara
+        ? { id: responderPara.id }
+        : null
+    });
   } catch (err) {
     console.error("Erro ao enviar mensagem:", err.message);
     alert("Erro ao enviar mensagem.");
